--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -12,16 +12,19 @@
 
 	<LinearLayout android:id="@+id/LinearLayout01"
 		android:layout_width="match_parent" android:layout_height="wrap_content"
-		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_alignParentTop="true"
 		android:gravity="center"
 		android:layout_centerHorizontal="true"
 		android:layout_marginBottom="10dp"
 		>	 	    
 		<TextView android:id="@+id/textView_SplashText"
-			android:layout_width="wrap_content" android:layout_height="wrap_content"
-			android:textSize="20sp" android:typeface="serif"
-			android:textStyle="bold" android:textColor="#fff" android:text="WASTL Mobile"
+			android:layout_width="wrap_content" 
+			android:layout_height="wrap_content"
+			android:textSize="20sp" 
+			android:typeface="serif"
+			android:textStyle="bold"
+			android:textColor="#fff" 
+			android:text="@string/app_name"
 			android:layout_gravity="center_vertical"					
 			/>				
 			
@@ -41,7 +44,7 @@
 		android:gravity="center"
 		>
 		
-	<com.ithtl.essapp.Activity.Splash.GifView 
+	<com.wastl.Activity.Splash.GifView 
     android:id="@+id/gifView1" 
     android:layout_width="200px" 
     android:layout_height="128px"
