--- a/res/layout/browse_districts.xml
+++ b/res/layout/browse_districts.xml
@@ -1,6 +1,46 @@
-<?xml version="1.0" encoding="UTF-8"?>
-    <FrameLayout android:id="@+id/frameLayout1" 
-    android:layout_width="fill_parent" 
-    android:layout_height="fill_parent" 
-    xmlns:android="http://schemas.android.com/apk/res/android">
-    </FrameLayout>
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RLayout_Main"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"    
+    android:background="#cdc9c9" >
+    
+    <RelativeLayout 
+        android:id="@+id/RLayout_Title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" 
+        android:layout_alignParentTop="true"
+        android:background="@drawable/title_bar" >
+        
+        <ImageView
+            android:id="@+id/image_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:contentDescription="@string/logo"
+            android:padding="5dp"
+            android:src="@drawable/logo_place" />
+        
+        <TextView style="@android:style/TextAppearance.WindowTitle"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:text="@string/app_name"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/image_title"/>
+                       
+    </RelativeLayout>
+        	
+       
+    <ListView 
+        android:id="@+id/listView_Browse_Districts" 
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:background="@android:color/darker_gray"
+        android:padding="10dp"
+        android:divider="@android:color/background_dark"
+        android:dividerHeight="15dp"
+        android:cacheColorHint="@android:color/darker_gray"
+        android:layout_below="@id/RLayout_Title" />
+    	
+</RelativeLayout>
