--- a/res/layout/list_view.xml
+++ b/res/layout/list_view.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/title_bar" >
         
         <ImageView
-            android:id="@+id/image_title"
+            android:id="@+id/image_Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
@@ -23,22 +23,23 @@
             android:src="@drawable/logo_place" />
         
         <TextView style="@android:style/TextAppearance.WindowTitle"
+            android:id="@+id/textView_Title"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/app_name"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/image_title"/>
+            android:layout_toRightOf="@id/image_Title"/>
                        
     </RelativeLayout>
         	
        
-    <ListView 
-        android:id="@+id/listView_Browse_Districts" 
+    <ListView
+        android:id="@+id/listView_Content" 
         android:layout_height="fill_parent"
         android:layout_width="fill_parent"
         android:background="@android:color/darker_gray"
         android:padding="10dp"
-        android:divider="@android:color/background_dark"
+        android:divider="@android:color/darker_gray"
         android:dividerHeight="15dp"
         android:cacheColorHint="@android:color/darker_gray"
         android:layout_below="@id/RLayout_Title" />
