--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -22,7 +22,7 @@
             android:padding="5dp"
             android:src="@drawable/logo_place" />
         
-        <TextView style="@android:style/TextAppearance.WindowTitle"
+        <TextView style="@android:style/TextAppearance.DialogWindowTitle"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="@string/app_name"
@@ -38,7 +38,8 @@
 	   android:layout_width="match_parent" 
 	   android:layout_height="match_parent"	   
 	   android:numColumns="auto_fit"	   	   
-	   android:stretchMode="columnWidth"	    
+	   android:stretchMode="columnWidth"
+	   android:verticalSpacing="10dp"    
 	   android:paddingTop="40dp" />
     	
 </RelativeLayout>
