--- a/res/layout/gridview_icon.xml
+++ b/res/layout/gridview_icon.xml
@@ -4,4 +4,5 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:gravity="center_horizontal"
+		android:textColor="@android:color/background_dark"
 		android:textColorHighlight="@android:color/primary_text_light" /> 
