--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -1,48 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-	android:id="@+id/RLayout2"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/rLayout_Splash"
 	android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="#cdc9c9"
-    android:gravity="center_horizontal|center_vertical"
-    android:layout_gravity="center_horizontal|center_vertical"
+    android:layout_height="fill_parent"            
     >
-
-	<LinearLayout android:id="@+id/LinearLayout01"
-		android:layout_width="match_parent" android:layout_height="wrap_content"
-		android:layout_alignParentTop="true"
-		android:gravity="center"
-		android:layout_centerHorizontal="true"
-		android:layout_marginBottom="10dp"
-		>	 	    
-		<TextView android:id="@+id/textView_SplashText"
-			android:layout_width="wrap_content" 
-			android:layout_height="wrap_content"
-			android:textSize="20sp" 
-			android:typeface="serif"
-			android:textStyle="bold"
-			android:textColor="#fff" 
-			android:text="@string/app_name"
-			android:layout_gravity="center_vertical"					
-			/>				
-			
-		<ImageView 
-   			android:id="@+id/image_badge"
-   			android:src="@drawable/logo"
-   			android:layout_width="58sp"
-  			android:layout_height="58sp"  			
-  			/>
-   			
-	</LinearLayout>
-	<LinearLayout android:id="@+id/LinearLayout02"
-		android:layout_width="fill_parent" 
-		android:layout_height="wrap_content"
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		android:layout_below="@+id/LinearLayout01"
-		android:gravity="center"
-		>
+    
+	<TextView 
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:gravity="center_vertical|center_horizontal"
+	    android:layout_centerVertical="true"
+	    android:layout_centerHorizontal="true"
+	    android:text="@string/app_name"
+	    android:textStyle="bold"
+	    android:textSize="24dp"
+	    android:drawableLeft="@drawable/logo_place"/>
 	
-    </LinearLayout>
+	<!-- Lower Austria badge 
+	<ImageView 
+	    android:layout_height="63dp"
+	    android:layout_width="50dp"
+	    android:src="@drawable/lower_austria"
+	    android:layout_alignParentBottom="true"
+	    android:contentDescription="@string/lowerAustria"
+	    android:layout_centerHorizontal="true" 
+	    android:paddingBottom="10dp"/>
+	 -->
+	 
+	<TextView 
+	    android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:text="@string/app_version"
+	    android:textSize="12dp"
+	    android:paddingRight="5dp"
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentBottom="true"/>
+	
 </RelativeLayout>
