--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -15,7 +15,8 @@
 	    android:text="@string/app_name"
 	    android:textStyle="bold"
 	    android:textSize="24dp"
-	    android:drawableLeft="@drawable/logo_place"/>
+	    android:drawableLeft="@drawable/logo_place"
+	    android:drawablePadding="5dp"/>
 	
 	<!-- Lower Austria badge 
 	<ImageView 
