--- a/res/layout/fire_department_map.xml
+++ b/res/layout/fire_department_map.xml
@@ -38,31 +38,15 @@
 
         </RelativeLayout>
         
-    <TextView 
-    	android:textAppearance="?android:attr/textAppearanceLarge" 
-    	android:layout_width="match_parent" 
-    	android:gravity="center_vertical|center_horizontal" 
-    	android:layout_height="58dp" 
-    	android:textColor="#b22222"
-    	android:id="@+id/tvFireDepartment"
-    	android:layout_below="@id/RLayout_Title" />
-
-	 
-	    <TextView  
-	        android:layout_width="fill_parent" 
-	        android:layout_height="wrap_content"
-	        android:padding="15dp"
-	    	android:textSize="18sp"
-	        android:textColor="#000000"
-	        android:id="@+id/textView_Location"
-	    />
-	    <TextView  
-	        android:layout_width="fill_parent" 
-	        android:layout_height="wrap_content"
-	        android:padding="15dp"
-	    	android:textSize="18sp" 
-	        android:textColor="#000000"
-	        android:id="@+id/textView_MobilePhone"
-	    />      
+      
+     <com.google.android.maps.MapView
+	     android:layout_width="fill_parent"
+	     android:layout_height="fill_parent"
+	     android:clickable="true"
+	     android:id="@+id/mapview"
+	     android:apiKey="0FBAvY4pUcSZ8kcyrAXjHbedNQeTunktJs4rRUg"	     
+	     android:layout_margin="10dp"
+	     android:layout_below="@id/RLayout_Title"
+     /> 
 
 </RelativeLayout>
